--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,12 @@
 name: GitHub CI
-on: [push]
+on:
+  push:
+    branches: 
+      - master
+  # release:
+  #   types: [published]
+  watch:
+    types: [started]
 
 jobs:
   linux32_build:
